@@ -77,6 +77,16 @@ class TestDefaultIndexHandler(unittest.TestCase):
             self.handler.get_data(['Title'])
         )
 
+    def test_get_data_includes_path_depth_if_path_was_included(self):
+        self.assertEqual(
+            {
+                u'path': u'/plone/doc',
+                u'path_depth': 2,
+                u'UID': u'09baa75b67f44383880a6dab8b3200b6',
+            },
+            self.handler.get_data(['path'])
+        )
+
     def test_add_without_attributes_adds_full_documemt(self):
         self.manager.connection.add = MagicMock(name='add')
         self.handler.add(None)
