@@ -4,6 +4,9 @@ Changelog
 2.4.1 (unreleased)
 ------------------
 
+- Make sure to always update 'path_depth' if 'path' is (re)indexed.
+  [lgraf]
+
 - Handle facet_counts in solr response.
   [njohner]
 
